[package]
name = "rs_read_bin_test"
version = "0.1.0"
authors = ["Caio Hamamura <caiohamamura@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hancock_read_bin = { git = "https://github.com/caiohamamura/rs_hancock_read_bin", branch="master" }
indicatif = "0.12.0"
structopt = { version = "^0.3" }
threadpool = "1.0"
image = "0.22.3"

[build-dependencies]
