[package]
name = "tls_3d_to_2d"
version = "0.1.0"
authors = ["Caio Hamamura <caiohamamura@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Transforms the Hancock binary terretrial laser scanning data (TLS) to 2D image for quick inspection."
readme = "README.md"
homepage = "https://github.com/caiohamamura/3d_to_2d"
repository = "https://github.com/caiohamamura/3d_to_2d"
keywords = ["TLS", "LiDAR"]
categories = ["science"]


[dependencies]
hancock_read_bin = { git = "https://github.com/caiohamamura/rs_hancock_read_bin", branch="master" }
indicatif = "0.12.0"
structopt = { version = "^0.3" }
threadpool = "1.0"
image = "0.22.3"

[build-dependencies]
