[package]
name = "tls_3d_to_2d"
version = "0.2.0"
authors = ["Caio Hamamura <caiohamamura@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Transforms the Hancock binary terretrial laser scanning data (TLS) to 2D image for quick inspection."
readme = "README.md"
homepage = "https://github.com/caiohamamura/3d_to_2d"
repository = "https://github.com/caiohamamura/3d_to_2d"
keywords = ["TLS", "LiDAR"]
categories = ["science"]


[dependencies]
tls_read_hancock_bin = "0.1.1"
indicatif = "0.12.0"
structopt = { version = "^0.3" }
threadpool = "1.0"
image = "0.22.3"
num_cpus = "1.0"

[build-dependencies]
